Adding changes to site

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -63,6 +63,14 @@
             rotate(90deg)
             translate(-3rem, -5rem);
     }
+    .profile-pic{
+        height: 200px;
+        border-radius: 10%;
+        position: absolute;
+        left: 45%;
+        top: 5%;
+    }
 }
+
 
 // 1:28:00 YouTube video to pick up next time
