--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -51,7 +51,7 @@
             left: 0;
             height: 100%;
             width: 100%;
-            background: $secondary-color;
+            background: white;
             opacity: 0;
             @include transition-ease;
         }
