--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -11,7 +11,7 @@
                 rgba(37,37,37, 0.9),
                 rgba(37,37,37, 0.3)
             ),
-            url("https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80") center  top fixed;
+            url("../dist/imgs/sunsetBird.jpg") center  top fixed;
         background-size: cover;
         display: flex;
         flex-direction: column;
