--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -11,8 +11,9 @@
             rgba(37,37,37, 0.9),
             rgba(37,37,37, 0.3)
         ),
-        url("https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80") center top fixed;
+        url("https://images.unsplash.com/photo-1523966211575-eb4a01e7dd51?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80") center ;
     background-size: cover;
+    
     
     h2 {
         font-size: 3rem;
@@ -34,4 +35,9 @@
         padding-right: 2px;
         
     }
+}
+
+.contact-list{
+    position: relative;
+    right: 0;
 }
