--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -63,6 +63,9 @@
             }
             .projects_btn {
                 opacity: 1;
+                color: orange;
+                font-size: 20px;
+                
             }
         }
 
