--- a/scss/main.css
+++ b/scss/main.css
@@ -357,6 +357,8 @@
 
 .projects_item:hover .projects_btn {
   opacity: 1;
+  color: orange;
+  font-size: 20px;
 }
 
 .projects_btns {
@@ -403,7 +405,7 @@
 
 .contact {
   height: 100%;
-  padding-top: 40vh;
+  padding-top: 300px;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -428,9 +430,8 @@
 .contact_list {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  grid-gap: 2rem;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
   font-size: 1.5rem;
 }
 
@@ -440,12 +441,11 @@
 }
 
 .contact .fas {
-  padding-right: 2px;
+  padding-right: 3px;
 }
 
-.contact-list {
-  position: relative;
-  right: 0;
+.email-me {
+  color: #c58017;
 }
 
 @media screen and (min-width: 768px) {
@@ -498,8 +498,8 @@
         grid-template-columns: repeat(3, 2fr);
   }
   .contact_list {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
   }
 }
 
