--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -33,16 +33,16 @@
     }
 
     .jobs{
-        width: 60vw;
+        width: 70vw;
         margin: 2rem auto 0 auto;
         display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 2rem;
+        // grid-template-columns: 1fr;
+        // grid-gap: 2rem;
 
         &_job {
             background: lighten($primary-color, 10%);
             padding: 0.5rem;
-            border-bottom: 5px solid $secondary-color;
+            // border-bottom: 5px solid $secondary-color;
 
             h2, h3 {
                 margin: 0.5rem;
