--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -25,6 +25,7 @@
             font-weight: 700;
         }
     }
+   
     
 }
 
@@ -40,4 +41,8 @@
         border: 3px solid white;
         transition: 0.3s ease;
     }
+}
+
+.description_self--taught{
+    width: 50%;
 }
